{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 86,
  "lineage": "b306792f-5f07-a989-e7ce-5c11bf178bd2",
  "resources": [
    {
      "mode": "data",
      "type": "google_compute_global_address",
      "name": "static_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.190.6.91",
            "address_type": "EXTERNAL",
            "id": "projects/waooaw-oauth/global/addresses/waooaw-lb-ip",
            "name": "waooaw-lb-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "waooaw-oauth",
            "self_link": "https://www.googleapis.com/compute/v1/projects/waooaw-oauth/global/addresses/waooaw-lb-ip",
            "status": "IN_USE"
          }
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/waooaw-oauth/regions/asia-south1/networkEndpointGroups/waooaw-demo-api-neg",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2026-01-03T22:39:20.740-08:00",
            "enable_cdn": false,
            "fingerprint": "SEXiOn2jM9o=",
            "generated_id": 498689909955474935,
            "id": "projects/waooaw-oauth/global/backendServices/demo-api-backend",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "log_config": [
              {
                "enable": true,
                "sample_rate": 1
              }
            ],
            "name": "demo-api-backend",
            "port_name": "http",
            "project": "waooaw-oauth",
            "protocol": "HTTPS",
            "self_link": "https://www.googleapis.com/compute/v1/projects/waooaw-oauth/global/backendServices/demo-api-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "module.backend_api.google_cloud_run_v2_service.service",
            "module.backend_api.google_cloud_run_v2_service_iam_member.noauth",
            "module.customer_portal.google_cloud_run_v2_service.service",
            "module.customer_portal.google_cloud_run_v2_service_iam_member.noauth",
            "module.networking.google_compute_region_network_endpoint_group.api",
            "module.networking.google_compute_region_network_endpoint_group.customer",
            "module.networking.google_compute_region_network_endpoint_group.platform",
            "module.platform_portal.google_cloud_run_v2_service.service",
            "module.platform_portal.google_cloud_run_v2_service_iam_member.noauth"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "customer",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/waooaw-oauth/regions/asia-south1/networkEndpointGroups/waooaw-demo-customer-neg",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2026-01-03T22:39:18.319-08:00",
            "enable_cdn": false,
            "fingerprint": "vyIPW1o6ldE=",
            "generated_id": 5144311379816592889,
            "id": "projects/waooaw-oauth/global/backendServices/demo-customer-backend",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "log_config": [
              {
                "enable": true,
                "sample_rate": 1
              }
            ],
            "name": "demo-customer-backend",
            "port_name": "http",
            "project": "waooaw-oauth",
            "protocol": "HTTPS",
            "self_link": "https://www.googleapis.com/compute/v1/projects/waooaw-oauth/global/backendServices/demo-customer-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "module.backend_api.google_cloud_run_v2_service.service",
            "module.backend_api.google_cloud_run_v2_service_iam_member.noauth",
            "module.customer_portal.google_cloud_run_v2_service.service",
            "module.customer_portal.google_cloud_run_v2_service_iam_member.noauth",
            "module.networking.google_compute_region_network_endpoint_group.api",
            "module.networking.google_compute_region_network_endpoint_group.customer",
            "module.networking.google_compute_region_network_endpoint_group.platform",
            "module.platform_portal.google_cloud_run_v2_service.service",
            "module.platform_portal.google_cloud_run_v2_service_iam_member.noauth"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "platform",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/waooaw-oauth/regions/asia-south1/networkEndpointGroups/waooaw-demo-platform-neg",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2026-01-03T22:39:20.168-08:00",
            "enable_cdn": false,
            "fingerprint": "q68zDURo1AE=",
            "generated_id": 7306791649159919095,
            "id": "projects/waooaw-oauth/global/backendServices/demo-platform-backend",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "log_config": [
              {
                "enable": true,
                "sample_rate": 1
              }
            ],
            "name": "demo-platform-backend",
            "port_name": "http",
            "project": "waooaw-oauth",
            "protocol": "HTTPS",
            "self_link": "https://www.googleapis.com/compute/v1/projects/waooaw-oauth/global/backendServices/demo-platform-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "module.backend_api.google_cloud_run_v2_service.service",
            "module.backend_api.google_cloud_run_v2_service_iam_member.noauth",
            "module.customer_portal.google_cloud_run_v2_service.service",
            "module.customer_portal.google_cloud_run_v2_service_iam_member.noauth",
            "module.networking.google_compute_region_network_endpoint_group.api",
            "module.networking.google_compute_region_network_endpoint_group.customer",
            "module.networking.google_compute_region_network_endpoint_group.platform",
            "module.platform_portal.google_cloud_run_v2_service.service",
            "module.platform_portal.google_cloud_run_v2_service_iam_member.noauth"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/waooaw-oauth/global/forwardingRules/demo-http-forwarding-rule",
            "ip_address": "35.190.6.91",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "demo-http-forwarding-rule",
            "port_range": "80-80",
            "project": "waooaw-oauth",
            "self_link": "https://www.googleapis.com/compute/v1/projects/waooaw-oauth/global/forwardingRules/demo-http-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/waooaw-oauth/global/targetHttpProxies/demo-http-proxy"
          },
          "dependencies": [
            "data.google_compute_global_address.static_ip",
            "module.backend_api.google_cloud_run_v2_service.service",
            "module.backend_api.google_cloud_run_v2_service_iam_member.noauth",
            "module.customer_portal.google_cloud_run_v2_service.service",
            "module.customer_portal.google_cloud_run_v2_service_iam_member.noauth",
            "module.load_balancer.google_compute_target_http_proxy.redirect",
            "module.load_balancer.google_compute_url_map.http_redirect",
            "module.networking.google_compute_region_network_endpoint_group.api",
            "module.networking.google_compute_region_network_endpoint_group.customer",
            "module.networking.google_compute_region_network_endpoint_group.platform",
            "module.platform_portal.google_cloud_run_v2_service.service",
            "module.platform_portal.google_cloud_run_v2_service_iam_member.noauth"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/waooaw-oauth/global/forwardingRules/demo-https-forwarding-rule",
            "ip_address": "35.190.6.91",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "demo-https-forwarding-rule",
            "port_range": "443-443",
            "project": "waooaw-oauth",
            "self_link": "https://www.googleapis.com/compute/v1/projects/waooaw-oauth/global/forwardingRules/demo-https-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/waooaw-oauth/global/targetHttpsProxies/demo-https-proxy"
          },
          "dependencies": [
            "data.google_compute_global_address.static_ip",
            "module.backend_api.google_cloud_run_v2_service.service",
            "module.backend_api.google_cloud_run_v2_service_iam_member.noauth",
            "module.customer_portal.google_cloud_run_v2_service.service",
            "module.customer_portal.google_cloud_run_v2_service_iam_member.noauth",
            "module.load_balancer.google_compute_backend_service.api",
            "module.load_balancer.google_compute_backend_service.customer",
            "module.load_balancer.google_compute_backend_service.platform",
            "module.load_balancer.google_compute_managed_ssl_certificate.customer",
            "module.load_balancer.google_compute_managed_ssl_certificate.platform",
            "module.load_balancer.google_compute_target_https_proxy.main",
            "module.load_balancer.google_compute_url_map.main",
            "module.networking.google_compute_region_network_endpoint_group.api",
            "module.networking.google_compute_region_network_endpoint_group.customer",
            "module.networking.google_compute_region_network_endpoint_group.platform",
            "module.platform_portal.google_cloud_run_v2_service.service",
            "module.platform_portal.google_cloud_run_v2_service_iam_member.noauth"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-03T22:36:11.388-08:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/waooaw-oauth/global/targetHttpProxies/demo-http-proxy",
            "name": "demo-http-proxy",
            "project": "waooaw-oauth",
            "proxy_bind": false,
            "proxy_id": 3746856960184005812,
            "self_link": "https://www.googleapis.com/compute/v1/projects/waooaw-oauth/global/targetHttpProxies/demo-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/waooaw-oauth/global/urlMaps/demo-http-redirect-map"
          },
          "dependencies": [
            "module.backend_api.google_cloud_run_v2_service.service",
            "module.backend_api.google_cloud_run_v2_service_iam_member.noauth",
            "module.customer_portal.google_cloud_run_v2_service.service",
            "module.customer_portal.google_cloud_run_v2_service_iam_member.noauth",
            "module.load_balancer.google_compute_url_map.http_redirect",
            "module.networking.google_compute_region_network_endpoint_group.api",
            "module.networking.google_compute_region_network_endpoint_group.customer",
            "module.networking.google_compute_region_network_endpoint_group.platform",
            "module.platform_portal.google_cloud_run_v2_service.service",
            "module.platform_portal.google_cloud_run_v2_service_iam_member.noauth"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-03T22:41:09.129-08:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/waooaw-oauth/global/targetHttpsProxies/demo-https-proxy",
            "name": "demo-https-proxy",
            "project": "waooaw-oauth",
            "proxy_bind": false,
            "proxy_id": 3630724553488446826,
            "quic_override": "ENABLE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/waooaw-oauth/global/targetHttpsProxies/demo-https-proxy",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/waooaw-oauth/global/sslCertificates/demo-customer-ssl",
              "https://www.googleapis.com/compute/v1/projects/waooaw-oauth/global/sslCertificates/demo-platform-ssl"
            ],
            "tls_early_data": "DISABLED",
            "url_map": "https://www.googleapis.com/compute/v1/projects/waooaw-oauth/global/urlMaps/demo-url-map"
          },
          "dependencies": [
            "module.backend_api.google_cloud_run_v2_service.service",
            "module.backend_api.google_cloud_run_v2_service_iam_member.noauth",
            "module.customer_portal.google_cloud_run_v2_service.service",
            "module.customer_portal.google_cloud_run_v2_service_iam_member.noauth",
            "module.load_balancer.google_compute_backend_service.api",
            "module.load_balancer.google_compute_backend_service.customer",
            "module.load_balancer.google_compute_backend_service.platform",
            "module.load_balancer.google_compute_managed_ssl_certificate.customer",
            "module.load_balancer.google_compute_managed_ssl_certificate.platform",
            "module.load_balancer.google_compute_url_map.main",
            "module.networking.google_compute_region_network_endpoint_group.api",
            "module.networking.google_compute_region_network_endpoint_group.customer",
            "module.networking.google_compute_region_network_endpoint_group.platform",
            "module.platform_portal.google_cloud_run_v2_service.service",
            "module.platform_portal.google_cloud_run_v2_service_iam_member.noauth"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "http_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-03T22:35:58.279-08:00",
            "default_route_action": [],
            "default_service": "",
            "default_url_redirect": [
              {
                "host_redirect": "",
                "https_redirect": true,
                "path_redirect": "",
                "prefix_redirect": "",
                "redirect_response_code": "MOVED_PERMANENTLY_DEFAULT",
                "strip_query": false
              }
            ],
            "description": "",
            "fingerprint": "_FKnYYX3SdE=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/waooaw-oauth/global/urlMaps/demo-http-redirect-map",
            "map_id": 1768060317397922977,
            "name": "demo-http-redirect-map",
            "path_matcher": [],
            "project": "waooaw-oauth",
            "self_link": "https://www.googleapis.com/compute/v1/projects/waooaw-oauth/global/urlMaps/demo-http-redirect-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.backend_api.google_cloud_run_v2_service.service",
            "module.backend_api.google_cloud_run_v2_service_iam_member.noauth",
            "module.customer_portal.google_cloud_run_v2_service.service",
            "module.customer_portal.google_cloud_run_v2_service_iam_member.noauth",
            "module.networking.google_compute_region_network_endpoint_group.api",
            "module.networking.google_compute_region_network_endpoint_group.customer",
            "module.networking.google_compute_region_network_endpoint_group.platform",
            "module.platform_portal.google_cloud_run_v2_service.service",
            "module.platform_portal.google_cloud_run_v2_service_iam_member.noauth"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-03T22:40:56.971-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/waooaw-oauth/global/backendServices/demo-customer-backend",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "NWdnVz-6StY=",
            "header_action": [],
            "host_rule": [
              {
                "description": "",
                "hosts": [
                  "cp.demo.waooaw.com"
                ],
                "path_matcher": "customer-matcher"
              },
              {
                "description": "",
                "hosts": [
                  "pp.demo.waooaw.com"
                ],
                "path_matcher": "platform-matcher"
              }
            ],
            "id": "projects/waooaw-oauth/global/urlMaps/demo-url-map",
            "map_id": 1868288722189399448,
            "name": "demo-url-map",
            "path_matcher": [
              {
                "default_route_action": [],
                "default_service": "https://www.googleapis.com/compute/v1/projects/waooaw-oauth/global/backendServices/demo-customer-backend",
                "default_url_redirect": [],
                "description": "",
                "header_action": [],
                "name": "customer-matcher",
                "path_rule": [
                  {
                    "paths": [
                      "/api/*",
                      "/auth/*",
                      "/health"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/waooaw-oauth/global/backendServices/demo-api-backend",
                    "url_redirect": []
                  }
                ],
                "route_rules": []
              },
              {
                "default_route_action": [],
                "default_service": "https://www.googleapis.com/compute/v1/projects/waooaw-oauth/global/backendServices/demo-platform-backend",
                "default_url_redirect": [],
                "description": "",
                "header_action": [],
                "name": "platform-matcher",
                "path_rule": [
                  {
                    "paths": [
                      "/api/*",
                      "/auth/*",
                      "/health"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/waooaw-oauth/global/backendServices/demo-api-backend",
                    "url_redirect": []
                  }
                ],
                "route_rules": []
              }
            ],
            "project": "waooaw-oauth",
            "self_link": "https://www.googleapis.com/compute/v1/projects/waooaw-oauth/global/urlMaps/demo-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.backend_api.google_cloud_run_v2_service.service",
            "module.backend_api.google_cloud_run_v2_service_iam_member.noauth",
            "module.customer_portal.google_cloud_run_v2_service.service",
            "module.customer_portal.google_cloud_run_v2_service_iam_member.noauth",
            "module.load_balancer.google_compute_backend_service.api",
            "module.load_balancer.google_compute_backend_service.customer",
            "module.load_balancer.google_compute_backend_service.platform",
            "module.networking.google_compute_region_network_endpoint_group.api",
            "module.networking.google_compute_region_network_endpoint_group.customer",
            "module.networking.google_compute_region_network_endpoint_group.platform",
            "module.platform_portal.google_cloud_run_v2_service.service",
            "module.platform_portal.google_cloud_run_v2_service_iam_member.noauth"
          ]
        }
      ]
    }
  ]
}